src/test/ui/attributes/no-prelude-nested.stderr
error[E0405]: cannot find trait `From` in this scope
  --> $DIR/no-prelude-nested.rs:34:10
   |
LL |     impl From for Test {}
   |          ^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::convert::From;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-prelude-nested.rs:35:10
   |
LL |     impl Clone for Test {}
   |          ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL |     use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-prelude-nested.rs:36:10
   |
LL |     impl Iterator for Test {}
   |          ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-prelude-nested.rs:37:10
   |
LL |     impl ToString for Test {}
   |          ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::string::ToString;
   |

error[E0404]: expected trait, found derive macro `Eq`
  --> $DIR/no-prelude-nested.rs:38:10
   |
LL |     impl Eq for Test {}
   |          ^^ not a trait
   |
help: consider importing this trait instead
   |
LL |     use std::cmp::Eq;
   |

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-prelude-nested.rs:41:9
   |
LL |         drop(2)
   |         ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |     use std::mem::drop;
   |

error[E0405]: cannot find trait `From` in this scope
  --> $DIR/no-prelude-nested.rs:49:14
   |
LL |         impl From for Test {}
   |              ^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::convert::From;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-prelude-nested.rs:50:14
   |
LL |         impl Clone for Test {}
   |              ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL |         use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-prelude-nested.rs:51:14
   |
LL |         impl Iterator for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-prelude-nested.rs:52:14
   |
LL |         impl ToString for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::string::ToString;
   |

error[E0404]: expected trait, found derive macro `Eq`
  --> $DIR/no-prelude-nested.rs:53:14
   |
LL |         impl Eq for Test {}
   |              ^^ not a trait
   |
help: consider importing this trait instead
   |
LL |         use std::cmp::Eq;
   |

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-prelude-nested.rs:55:13
   |
LL |             drop(2)
   |             ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |         use std::mem::drop;
   |

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0404, E0405, E0425.
For more information about an error, try `rustc --explain E0404`.
